tests/semantic/fail/function-wrong-arg-count-2.tiger
let
      function f(x:int) : int = 0
in
      f(0,0)
end
